mobile overflow fix

--- a/newhomestyle.css
+++ b/newhomestyle.css
@@ -39,8 +39,9 @@ nav {
 }
 
 @media screen and (max-width: 650px) {
-    body {
+    .wrapper {
         overflow-x: hidden;
+        position: fixed;
     }
     .nav-links {
         position: absolute;
